<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/LayoutVerticalStyle"
              android:layout_gravity="right" >

  <LinearLayout
      style="@style/LayoutVerticalStyle"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp" >

    <TextView
        android:id="@+id/text_description_label"
        style="@style/PasswordReminderDecsLabelStyle"
        android:layout_marginBottom="10dp"
        android:text="@string/password_reminder__description" />
    <TextView
        android:id="@+id/text_error_messages"
        style="@style/ErrorLabelStyle"
        android:layout_marginBottom="10dp"
        android:text="@string/message_error__wrong_input"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/text_email_field_label"
        style="@style/SettingLabelStyle"
        android:text="@string/password_reminder__form_field_registered_email" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/HomeTxtDescStyle"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent">
      <requestFocus/>
    </EditText>

  </LinearLayout>

  <LinearLayout
      style="@style/LayoutVerticalStyle"
      android:gravity="center_horizontal">
    <Button
        android:id="@+id/button_send"
        style="@style/ButtonStyle"
        android:text="@string/password_reminder__send_button" />
  </LinearLayout>

</LinearLayout>
