<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/LayoutVerticalStyle" >

  <LinearLayout
      style="@style/LayoutHorizontalStyle"
      android:layout_height="wrap_content">
    <TextView
        android:id="@+id/text_rank"
        style="@style/SettingLabelStyle"
        android:layout_width="20dp"
        android:layout_marginLeft="0dp"
        android:layout_weight="0.16"
        android:gravity="right"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/text_rank_suffix_label"
        style="@style/SettingLabelStyle"
        android:layout_width="wrap_content"
        android:layout_marginLeft="0dp"
        android:text="@string/list_row_time_ranking__place"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/text_nickname"
        style="@style/SettingLabelStyle"
        android:layout_width="50dp"
        android:layout_weight="0.44"
        android:text="@string/list_row_time_ranking__nickname_default"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/text_time"
        style="@style/SettingLabelStyle"
        android:layout_width="wrap_content"
        android:layout_weight="0.23"
        android:text="@string/list_row_time_ranking__time_default"
        android:textSize="20sp" />
  </LinearLayout>

</LinearLayout>
